# yggdrasil

./: INSTALL_CN.txt  INSTALL_EN.txt  INSTALL_JP.txt  README.md  begin_test_env_android_termux_arm32-debug.sh  begin_test_env_android_termux_arm32.sh  begin_test_env_android_termux_arm64-debug.sh  begin_test_env_android_termux_arm64.sh  begin_test_env_android_termux_riscv64-debug.sh  begin_test_env_android_termux_riscv64.sh  begin_test_env_android_termux_x86-debug.sh  begin_test_env_android_termux_x86.sh  begin_test_env_android_termux_x86_64-debug.sh  begin_test_env_android_termux_x86_64.sh  begin_test_env_darwin_x64.sh  begin_test_env_darwin_x64d.sh  begin_test_env_linux_x32.sh  begin_test_env_linux_x32d.sh  begin_test_env_linux_x64.sh  begin_test_env_linux_x64d.sh  build_and_format_jni_yggr_cpp11.sh  build_and_format_jni_yggr_cpp14.sh  build_and_format_jni_yggr_cpp17.sh  build_and_format_jni_yggr_cpp20.sh  build_and_format_jni_yggr_devel_cpp11.sh  build_and_format_jni_yggr_devel_cpp14.sh  build_and_format_jni_yggr_devel_cpp17.sh  build_and_format_jni_yggr_devel_cpp20.sh  build_and_format_jni_yggr_lib_only_cpp11.sh  build_and_format_jni_yggr_lib_only_cpp14.sh  build_and_format_jni_yggr_lib_only_cpp17.sh  build_and_format_jni_yggr_lib_only_cpp20.sh  build_and_format_jni_yggr_test_only_cpp11.sh  build_and_format_jni_yggr_test_only_cpp14.sh  build_and_format_jni_yggr_test_only_cpp17.sh  build_and_format_jni_yggr_test_only_cpp20.sh  build_and_format_jni_yggr_test_server_client_cpp11.sh  build_and_format_jni_yggr_test_server_client_cpp14.sh  build_and_format_jni_yggr_test_server_client_cpp17.sh  build_and_format_jni_yggr_test_server_client_cpp20.sh  (+174 more)
CMakeDarwin/yggr/: CMakeLists.txt  cmake-build-iphonesimulator-clang-darwin16-cpp20-x86_64-xcode.sh  cmake-build-macosx-clang-darwin16-cpp20-arm64.sh  cmake_all_build_and_collection.sh  cmake_all_build_and_collection_cpp14.sh  cmake_all_build_and_collection_cpp17.sh  cmake_all_build_and_collection_cpp20.sh  cmake_all_build_and_collection_lipo.sh
CMakeDarwin/yggr/clt_test_static_task_center_balance/: CMakeLists.txt
CMakeDarwin/yggr/clt_test_uuid_static_task_center_balance/: CMakeLists.txt
CMakeDarwin/yggr/dll_cal_test/: CMakeLists.txt
CMakeDarwin/yggr/encryption_tool_clt_test/: CMakeLists.txt
CMakeDarwin/yggr/encryption_tool_proxy_srv_test/: CMakeLists.txt
CMakeDarwin/yggr/encryption_tool_proxy_trun_srv_test/: CMakeLists.txt
CMakeDarwin/yggr/encryption_tool_svr_test/: CMakeLists.txt
CMakeDarwin/yggr/lua_calculator/: CMakeLists.txt
CMakeDarwin/yggr/lua_clt_test/: CMakeLists.txt
CMakeDarwin/yggr/p2p_boot_svr_test/: CMakeLists.txt
CMakeDarwin/yggr/p2p_peer_test/: CMakeLists.txt
CMakeDarwin/yggr/proxy_trun_mixer_svr_test/: CMakeLists.txt
CMakeDarwin/yggr/proxy_trun_srv_test/: CMakeLists.txt
CMakeDarwin/yggr/seh_svr_test/: CMakeLists.txt
CMakeDarwin/yggr/svr_test_async/: CMakeLists.txt
CMakeDarwin/yggr/svr_test_static_task_center_balance_async/: CMakeLists.txt
CMakeDarwin/yggr/svr_test_uuid_static_task_center_balance_async/: CMakeLists.txt
CMakeDarwin/yggr/tool_conv_to_cb_solution_linux/: CMakeLists.txt
CMakeDarwin/yggr/tool_conv_to_darwin_cmakelists_txt/: CMakeLists.txt
CMakeDarwin/yggr/tool_downgrade_vcxproj/: CMakeLists.txt
CMakeDarwin/yggr/tool_format_vcxproj/: CMakeLists.txt
CMakeDarwin/yggr/tool_remove_duplicate_files/: CMakeLists.txt
CMakeDarwin/yggr/tool_suo_batch_build_selector/: CMakeLists.txt
CMakeDarwin/yggr/tool_test_project_maker/: CMakeLists.txt
CMakeDarwin/yggr/tool_test_search_files/: CMakeLists.txt
CMakeDarwin/yggr/udp_clt_test/: CMakeLists.txt
CMakeDarwin/yggr/yggr_any_val/: CMakeLists.txt
CMakeDarwin/yggr/yggr_ids/: CMakeLists.txt
CMakeDarwin/yggr/yggr_lua_base_type/: CMakeLists.txt
CMakeDarwin/yggr/yggr_time/: CMakeLists.txt
CMakeDarwin/yggr_devel/yggr_encryption_tool/: CMakeLists.txt
CMakeDarwin/yggr_devel/yggr_nsql_database_system/: CMakeLists.txt
CMakeDarwin/yggr_test_only/func_functional_args_size_test/: CMakeLists.txt
CMakeDarwin/yggr_test_only/nsql_database_system_c_mongo_read_prefs_test/: CMakeLists.txt
CMakeDarwin/yggr_test_only/safe_container_safe_unordered_multiset_opt_performance_test/: CMakeLists.txt
CMakeDarwin/yggr_test_server_client/: CMakeLists.txt  cmake-build-iphoneos-clang-darwin16-cpp20-xcode.sh  cmake-build-macosx-clang-darwin16-cpp11.sh  cmake-build-macosx-clang-darwin16-cpp14-x86_64.sh  cmake-build-tpl_call.sh  cmake_all_build_and_collection_cpp11.sh  cmake_all_build_and_collection_lipo_cpp11.sh  cmake_all_build_and_collection_lipo_cpp14.sh  cmake_all_build_and_collection_lipo_cpp17.sh  cmake_all_build_and_collection_lipo_cpp20.sh
CMakeDarwin/yggr_test_server_client/active_svr_test/: CMakeLists.txt
CMakeDarwin/yggr_test_server_client/clt_test_async/: CMakeLists.txt
CMakeDarwin/yggr_test_server_client/clt_test_static_task_center_balance2/: CMakeLists.txt
CMakeDarwin/yggr_test_server_client/clt_test_uuid_static_task_center_balance/: CMakeLists.txt
CMakeDarwin/yggr_test_server_client/encryption_tool_proxy_trun_srv_test/: CMakeLists.txt
CMakeDarwin/yggr_test_server_client/encryption_tool_svr_test/: CMakeLists.txt
CMakeDarwin/yggr_test_server_client/lua_active_svr_test/: CMakeLists.txt
CMakeDarwin/yggr_test_server_client/lua_cal_svr_procotol/: CMakeLists.txt
CMakeDarwin/yggr_test_server_client/lua_hello_dll/: CMakeLists.txt
CMakeDarwin/yggr_test_server_client/p2p_boot_svr_test/: CMakeLists.txt
CMakeDarwin/yggr_test_server_client/proxy_trun_srv_test/: CMakeLists.txt
CMakeDarwin/yggr_test_server_client/pyd_export/: CMakeLists.txt
CMakeDarwin/yggr_test_server_client/seh_svr_test/: CMakeLists.txt
CMakeDarwin/yggr_test_server_client/svr_test_balance_async/: CMakeLists.txt
CMakeDarwin/yggr_test_server_client/svr_test_service_handler_shared_wrap_test/: CMakeLists.txt
CMakeDarwin/yggr_test_server_client/udp_clt_test/: CMakeLists.txt
CMakeDarwin/yggr_test_server_client/udp_proxy_svr_test/: CMakeLists.txt
CMakeDarwin/yggr_test_server_client/udp_proxy_trun_svr_test/: CMakeLists.txt
active_svr_test/: config.hpp  (+23 more)
(+21408 files in other folders)
